# plugins/permission-backend/src/schema/openapi.yaml
@@ -25,8 +25,8 @@ paths:
                 required:
                   - items
                 additionalProperties: false
-        # "400":
-        #   $ref: '#/components/responses/ErrorResponse'
+        "400":
+          $ref: '#/components/responses/ErrorResponse'
       requestBody:
         content:
           application/json:
